intermediate state (ResourcePicker)